Test recorded frames contain json data