@@ -7,21 +7,17 @@ import java.net.ServerSocket;
 import java.net.Socket;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 
 public class Play {
     private static final int SERVER_PORT = 12345;
     private static final String INPUT_DIR = "received_frames";
     private final int serverPort;
-    private final File inputDir;
     private final File indexFile;
 
     public Play(int serverPort, String inputDir) {
         this.serverPort = serverPort;
-        this.inputDir = new File(inputDir);
         this.indexFile = new File(inputDir, "index.log");
         if (!this.indexFile.exists()) {
             throw new Error("Index file not found:" + indexFile);
@@ -32,7 +28,7 @@ public class Play {
         Play play;
         if (args.length != 2) {
             play = new Play(SERVER_PORT, INPUT_DIR);
-        }else{
+        } else {
             play = new Play(Integer.parseInt(args[0]), args[1]);
         }
         List<FileFrame> frames = play.loadFrames();
@@ -42,11 +38,10 @@ public class Play {
     private static void replayFrames(OutputStream outputStream, List<FileFrame> frames) throws IOException {
         if (frames.isEmpty()) return;
         long startTime = System.currentTimeMillis();
-        long firstFrameTime = frames.get(0).timestamp;
+        long firstFrameTime = frames.getFirst().timestamp;
 
-        for (int i = 0; i < frames.size(); i++) {
-            FileFrame frame = frames.get(i);
-            if(frame.event==Event.FRAME) {
+        for (FileFrame frame : frames) {
+            if (frame.event == Event.FRAME) {
                 byte[] data = Files.readAllBytes(Path.of(frame.filename));
 
                 long delay = (frame.timestamp - firstFrameTime) - (System.currentTimeMillis() - startTime);
@@ -65,45 +60,29 @@ public class Play {
     }
 
     public void play(List<FileFrame> frames) {
-        while (true) {
-            try (ServerSocket serverSocket = new ServerSocket(SERVER_PORT)) {
-                System.out.println("Replay server started on port " + SERVER_PORT);
+        try (ServerSocket serverSocket = new ServerSocket(this.serverPort)) {
+            System.out.println("Replay server started on port " + this.serverPort);
 
-                while (true) {
-                    try (Socket socket = serverSocket.accept();
-                         OutputStream outputStream = socket.getOutputStream()) {
-                        System.out.println("Client connected: " + socket.getInetAddress());
-                        replayFrames(outputStream, frames);
-                    } catch (IOException e) {
-                        System.out.println("Connection lost. Waiting for a new client...");
-                    }
+            while (true) {
+                try (Socket socket = serverSocket.accept();
+                     OutputStream outputStream = socket.getOutputStream()) {
+                    System.out.println("Client connected: " + socket.getInetAddress());
+                    replayFrames(outputStream, frames);
+                } catch (IOException e) {
+                    System.out.println("Connection lost. Waiting for a new client...");
                 }
-            } catch (IOException e) {
-                System.err.println("Server error: " + e.getMessage());
-                try {
-                    Thread.sleep(5000);
-                } catch (InterruptedException ignored) {
-                }
+            }
+        } catch (IOException e) {
+            System.err.println("Server error: " + e.getMessage());
+            try {
+                Thread.sleep(5000);
+            } catch (InterruptedException ignored) {
             }
         }
     }
 
     private List<FileFrame> loadFrames() {
-        List<FileFrame> frames = new ArrayList<>();
-        try (Scanner scanner = new Scanner(indexFile)) {
-            while (scanner.hasNextLine()) {
-                String[] parts = scanner.nextLine().split(" - ");
-                if (parts.length == 3) {
-                    long timestamp = Long.parseLong(parts[0]);
-                    String filename = parts[2];
-                    Event event = Event.valueOf(parts[1]);
-                    frames.add(new FileFrame(timestamp, event, filename));
-                }
-            }
-        } catch (IOException e) {
-            System.err.println("Failed to load index file: " + e.getMessage());
-        }
-        return frames;
+        return FrameUtils.loadFrames(indexFile);
     }
 
 }
